<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <ImageView
        android:id="@+id/imgCard"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_margin="5dp"
        />

    <ScrollView
        android:layout_below="@+id/imgCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:id="@+id/dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/chkAccountOwner"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ownerName"/>

            <CheckBox
                android:id="@+id/chkCVV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/dummy"
                android:text="@string/CVV"/>

            <CheckBox
                android:id="@+id/chkExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkAccountOwner"
                android:text="@string/expirationDate"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>