<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/imgBankLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bnk_def"/>

        <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bankName"
            android:textSize="@dimen/textFontSize"/>

        <org.kasabeh.raghamcardbank.ui_components.FontEdit
            android:id="@+id/edtBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textSize="@dimen/editFontSize"
            android:gravity="right"/>

        <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardNO"
            android:textSize="@dimen/textFontSize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <org.kasabeh.raghamcardbank.ui_components.FontEdit
                android:id="@+id/edtAccountNO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editFontSize"
                android:inputType="phone"
                android:gravity="left"/>

        </LinearLayout>

        <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ownerName"
            android:textSize="@dimen/textFontSize"/>

        <org.kasabeh.raghamcardbank.ui_components.FntAutoTxtView
            android:id="@+id/edtPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:gravity="right"
            android:text=""
            android:textSize="@dimen/textFontSize" />

         <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:id="@+id/txtCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CVV"
            android:textSize="@dimen/textFontSize"/>

        <org.kasabeh.raghamcardbank.ui_components.FontEdit
            android:id="@+id/edtCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/editFontSize"
            android:inputType="phone"
            android:gravity="left"/>


        <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:id="@+id/txtExpiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expirationDate"
            android:textSize="@dimen/textFontSize"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <org.kasabeh.raghamcardbank.ui_components.FontEdit
                android:id="@+id/edtExpirationYear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:textSize="@dimen/editFontSize"
                android:inputType="phone"
                android:gravity="left"/>

            <org.kasabeh.raghamcardbank.ui_components.FntTxtView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_separator"
                android:textSize="@dimen/textFontSize"/>

            <org.kasabeh.raghamcardbank.ui_components.FontEdit
                android:id="@+id/edtExpirationMonth"
                android:layout_width="100dp"
                android:maxLength="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/editFontSize"
                android:inputType="phone"
                android:gravity="left"/>

        </LinearLayout>

        <org.kasabeh.raghamcardbank.ui_components.FntTxtView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="@dimen/textFontSize"/>

        <org.kasabeh.raghamcardbank.ui_components.FontEdit
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/editFontSize"
            android:gravity="right"/>
    </LinearLayout>
</ScrollView>