<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dip"
	    android:gravity="right"	    
	    android:orientation="vertical" >
	    		
			<org.kasabeh.raghamcardbank.ui_components.FntTxtView
    	    android:id="@+id/txtDesc"     	       	   
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="0dip"
    	    android:text="@string/saveDesc"
    	    android:gravity="right"
    	    android:textSize="@dimen/textFontSizeSamll" />

			<org.kasabeh.raghamcardbank.ui_components.FntTxtView
    	    android:id="@+id/txtPath"    	    
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="15dip"    	    
    	    android:text=""
    	    android:gravity="left"
    	    android:textSize="@dimen/textFontSizeSamll" />
			
			<LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginTop="14dp" 
			    android:orientation="horizontal">

	    		<Button	      
			        android:id="@+id/btnPath"
					style="@style/Widget.AppCompat.Button.Colored"
					android:textColor="@color/colorTextIcons"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:drawableTop="@drawable/folder_white_big"
			        android:layout_marginRight="12dp"
			        android:text="@string/strChangePath"/>
			    			    
		    	<Button	      
				        android:id="@+id/btnSave"
						style="@style/Widget.AppCompat.Button.Colored"
						android:textColor="@color/colorTextIcons"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:drawableTop="@drawable/bk_white"
				        android:text="@string/saveAction"/>
		    				    			    			    
			</LinearLayout>						        	        	                       

	    	<ProgressBar
	    	    android:id="@+id/pgBar"
	    	    style="?android:attr/progressBarStyleLarge"
	    	    android:layout_width="wrap_content"
	    	    android:layout_gravity="center_horizontal"
	    	    android:visibility="gone"
	    	    android:layout_height="wrap_content" />
	    	
			<org.kasabeh.raghamcardbank.ui_components.FntTxtViewSimple
				android:id="@+id/txtResult"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorAccent"
				android:textColor="@color/colorTextIcons"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text=""
				android:layout_marginTop="10dp"
				android:visibility="gone"
				android:gravity="center"
				android:textSize="@dimen/textFontSize" />

		<org.kasabeh.raghamcardbank.ui_components.FntTxtViewSimple
    	    android:id="@+id/txtHint"     	       	   
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="10dip"
    	    android:text="@string/strHintBackup"
    	    android:gravity="center_horizontal"
    	    android:textColor="@color/myGrey"
    	    android:textSize="@dimen/textFontSizeVerySamll" />
							        	        	        	        	        	                    
	</LinearLayout>
</ScrollView>

