<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFffacac"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:gravity="right"	    
	    android:orientation="vertical" >

		<org.kasabeh.raghamcardbank.ui_components.FntTxtView
			android:id="@+id/txtResult"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:background="@color/colorAccent"
			android:textColor="@color/colorTextIcons"
			android:text=""
			android:visibility="gone"
			android:gravity="center"
			android:textSize="@dimen/textFontSize" />

		<org.kasabeh.raghamcardbank.ui_components.FntTxtView
    	    android:id="@+id/txtDesc"     	       	   
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="0dip"
    	    android:text="@string/dellDesc"
    	    android:gravity="right"
    	    android:textSize="@dimen/textFontSizeSamll" />

			<org.kasabeh.raghamcardbank.ui_components.FntTxtView
	    	    android:id="@+id/txtDellPass"     	       	   
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:paddingTop="15dip"
	    	    android:text="@string/pass"
	    	    android:gravity="right"
	    	    android:textSize="@dimen/textFontSize" />
			<EditText
		        android:id="@+id/edtDellPass"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="left"
		        android:textSize="@dimen/editFontSize"
		        android:inputType="text"	       
		    />							        	        	                       
	    	<Button	      
			        android:id="@+id/btnDellAll"
			        android:background="#0000"			        
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:drawableTop="@drawable/del"
			        android:layout_gravity="center_horizontal"			        	                        
			        android:text="@string/dellAction"/>

    		    	

	    	<ProgressBar
	    	    android:id="@+id/pgBar"
	    	    style="?android:attr/progressBarStyleLarge"
	    	    android:layout_width="wrap_content"
	    	    android:layout_gravity="center_horizontal"
	    	    android:visibility="gone"
	    	    android:layout_height="wrap_content" />
	        	        	        	        	        	                    
	</LinearLayout>
</ScrollView>


